--- a/public/index.html
+++ b/public/index.html
@@ -2,22 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./favicon.ico" sizes="16x16" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" sizes="16x16" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Swag Republic Store"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
-    <title>React App</title>
+    <title>Swag Republic - online</title>
+    <script src="https://cdn.fedapay.com/checkout.js?v=1.1.7"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+
     
   </body>
 </html>
